--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "license": "Apache-2.0",
   "private": false,
   "peerDependencies": {
-    "ember-template-lint": "^1.3.0"
+    "ember-template-lint": "^1.3.0",
+    "prettier": "^1.18.2"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
@@ -36,7 +37,6 @@
     "jest": "^24.8.0",
     "jest-watch-typeahead": "^0.3.1",
     "lerna-changelog": "^0.8.2",
-    "prettier": "^1.18.2",
     "prettylint": "^1.0.0"
   },
   "engines": {
