Cleanup jest config

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "changelog": "lerna-changelog",
     "lint:js": "eslint . --cache",
     "lint:md": "prettylint ./*.md",
-    "test": "jest",
+    "test": "",
     "format": "yarn prettier '**/*.{hbs,js,json,md,yml}' --write"
   },
   "repository": "git@github.com:dcyriller/ember-template-lint-plugin-prettier.git",
@@ -31,11 +31,8 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-jest": "^22.7.0",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "jest": "^24.8.0",
-    "jest-watch-typeahead": "^0.3.1",
     "lerna-changelog": "^0.8.2",
     "prettylint": "^1.0.0"
   },
