Add getLocfromIndex function to compute error loc
Also: fix message formatting by removing the curly brackets

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "files": [
     "ember-template-lint-plugin-prettier.js",
-    "rules"
+    "rules",
+    "utils"
   ],
   "main": "ember-template-lint-plugin-prettier.js",
   "scripts": {
