--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - yarn install --frozen-lockfile --non-interactive
 
 script:
-  - yarn list --pattern "ember-template-lint|prettier" --depth=0
+  - cat node_modules/ember-template-lint/package.json | grep \"version\"
   - yarn lint:js
   - yarn lint:md
   - yarn test
