--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,6 @@ before_install:
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH=$HOME/.yarn/bin:$PATH
 
-install:
-  - yarn install --frozen-lockfile --non-interactive
-
 script:
   - cat node_modules/ember-template-lint/package.json | grep \"version\"
   - yarn lint:js
@@ -34,10 +31,9 @@ jobs:
   fail_fast: true
 
   include:
-    # runs linting and tests with current locked deps
-
     - stage: "Tests"
       name: "ember-template-lint 1.6.1"
+      install: yarn install --frozen-lockfile --non-interactive
 
     - name: "ember-template-lint latest"
       install: yarn install --no-lockfile
