--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   "license": "Apache-2.0",
   "private": false,
   "peerDependencies": {
-    "ember-template-lint": "^2.1.0",
+    "ember-template-lint": "github:ember-template-lint/ember-template-lint",
+    "ember-template-recast": "^4.0.0",
     "prettier": "^1.18.2"
   },
   "devDependencies": {
-    "ember-template-lint": "^2.1.0",
+    "ember-template-lint": "github:ember-template-lint/ember-template-lint",
+    "ember-template-recast": "^4.0.0",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-node": "^11.0.0",
