--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "lerna-changelog": "^1.0.0",
+    "markdownlint-cli": "^0.22.0",
     "mocha": "^7.0.1",
     "prettier": "^1.19.0"
   },
