--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "main": "ember-template-lint-plugin-prettier.js",
   "scripts": {
     "changelog": "lerna-changelog",
+    "lint": "npm-run-all lint:* --continue-on-error",
+    "lint:docs": "markdownlint 'docs/**/*.md'",
     "lint:js": "eslint . --cache",
     "test": "mocha --recursive",
     "format": "yarn prettier '**/*.{hbs,js,json,yml}' --write"
@@ -38,6 +40,7 @@
     "lerna-changelog": "^1.0.0",
     "markdownlint-cli": "^0.22.0",
     "mocha": "^7.0.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.0"
   },
   "engines": {
