--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
   },
   "dependencies": {
     "prettier-linter-helpers": "^1.0.0"
+  },
+  "volta": {
+    "node": "12.16.3",
+    "yarn": "1.22.4"
   }
 }
