--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prettier-linter-helpers": "^1.0.0"
   },
   "devDependencies": {
-    "ember-template-lint": "^3.4.2",
+    "ember-template-lint": "^4.0.0-beta.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.0.0",
