--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "repository": "git@github.com:ember-template-lint/ember-template-lint-plugin-prettier.git",
   "license": "Apache-2.0",
   "author": "Cyrille David <'cyrille@qonto.eu'>",
-  "main": "ember-template-lint-plugin-prettier.js",
+  "main": "./ember-template-lint-plugin-prettier.js",
+  "exports": "./ember-template-lint-plugin-prettier.js",
+  "type": "module",
   "files": [
     "ember-template-lint-plugin-prettier.js",
     "lib",
@@ -31,7 +33,7 @@
     "prettier-linter-helpers": "^1.0.0"
   },
   "devDependencies": {
-    "ember-template-lint": "^4.0.0-beta.0",
+    "ember-template-lint": "^4.0.0-beta.3",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.0.0",
@@ -49,7 +51,7 @@
     "prettier": ">=1.18.1"
   },
   "engines": {
-    "node": "12.* || 14.* || >= 16.*"
+    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -70,7 +72,7 @@
     }
   },
   "volta": {
-    "node": "12.22.7",
+    "node": "16.13.1",
     "yarn": "1.22.17"
   }
 }
