--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "release-it-lerna-changelog": "^4.0.1"
   },
   "peerDependencies": {
-    "ember-template-lint": ">=2.10.0",
+    "ember-template-lint": "^4.0.0-beta.3",
     "prettier": ">=1.18.1"
   },
   "engines": {
