--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier-linter-helpers": "^1.0.0"
   },
   "devDependencies": {
+    "@release-it-plugins/lerna-changelog": "^5.0.0",
     "ember-template-lint": "^4.0.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
@@ -43,8 +44,7 @@
     "mocha": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
-    "release-it": "^14.11.6",
-    "release-it-lerna-changelog": "^5.0.0"
+    "release-it": "^14.11.6"
   },
   "peerDependencies": {
     "ember-template-lint": ">= 4.0.0",
@@ -58,7 +58,7 @@
   },
   "release-it": {
     "plugins": {
-      "release-it-lerna-changelog": {
+      "@release-it-plugins/lerna-changelog": {
         "infile": "CHANGELOG.md",
         "launchEditor": false
       }
