--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test": "mocha --recursive"
   },
   "dependencies": {
+    "@prettier/sync": "^0.2.1",
     "prettier-linter-helpers": "^1.0.0"
   },
   "devDependencies": {
@@ -38,17 +39,17 @@
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "lerna-changelog": "^2.1.0",
     "markdownlint-cli": "^0.33.0",
     "mocha": "^10.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.1",
+    "prettier": "^3.0.0",
     "release-it": "^15.5.0"
   },
   "peerDependencies": {
     "ember-template-lint": ">= 4.0.0",
-    "prettier": ">= 1.18.1"
+    "prettier": ">= 3.0.0"
   },
   "engines": {
     "node": "^16.0.0 || ^18.0.0 || >=20.0.0"
@@ -72,7 +73,7 @@
     }
   },
   "volta": {
-    "node": "16.13.1",
+    "node": "16.20.1",
     "yarn": "1.22.17"
   }
 }
