--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, windows]
-        node-version: [12.x, 14.x, 16.x, 17.x, 18.x]
+        node-version: [16.x, 18.x, 20.x]
 
         # excluded because it is the `test` job above
         exclude:
